--- a/src/frontend/.prettierrc.json
+++ b/src/frontend/.prettierrc.json
@@ -6,8 +6,8 @@
 	"printWidth": 80,
 	"tabWidth": 2,
 	"useTabs": true,
-	"semi": true,
-	"singleQuote": false,
+	"semi": false,
+	"singleQuote": true,
 	"trailingComma": "all",
 	"bracketSpacing": true,
 	"arrowParens": "always",
