--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -6,9 +6,10 @@
 	"scripts": {
 		"dev": "vite",
 		"build": "tsc -b && vite build",
-		"lint": "eslint --fix .",
+		"lint": "eslint --fix",
 		"format": "prettier --write .",
-		"preview": "vite preview"
+		"preview": "vite preview",
+		"type-check": "tsc -b"
 	},
 	"dependencies": {
 		"@hookform/resolvers": "^3.9.1",
@@ -34,6 +35,8 @@
 		"sass": "^1.80.6",
 		"tailwind-merge": "^2.5.4",
 		"tailwindcss-animate": "^1.0.7",
+		"vite-plugin-checker": "^0.8.0",
+		"vite-plugin-tsconfig-paths": "^1.4.1",
 		"zod": "^3.23.8"
 	},
 	"devDependencies": {
@@ -52,6 +55,7 @@
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-import": "^2.31.0",
 		"eslint-plugin-jsx-a11y": "^6.10.2",
+		"eslint-plugin-mobx": "^0.0.13",
 		"eslint-plugin-prettier": "^5.2.1",
 		"eslint-plugin-react": "^7.37.2",
 		"eslint-plugin-react-hooks": "^5.0.0",
@@ -62,7 +66,6 @@
 		"tailwindcss": "^3.4.14",
 		"typescript": "~5.6.2",
 		"typescript-eslint": "^8.10.0",
-		"vite": "^5.4.9",
-		"vite-plugin-eslint2": "^5.0.1"
+		"vite": "^5.4.9"
 	}
 }
