feat: :sparkles: add toast error | refactor axios responce

--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -20,11 +20,13 @@
 		"@radix-ui/react-popover": "^1.1.2",
 		"@radix-ui/react-separator": "^1.1.0",
 		"@radix-ui/react-slot": "^1.1.0",
+		"@radix-ui/react-toast": "^1.2.2",
 		"axios": "^1.7.7",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.1",
 		"cmdk": "^1.0.0",
 		"compose-function": "^3.0.3",
+		"lodash.merge": "^4.6.2",
 		"lucide-react": "^0.454.0",
 		"mobx": "^6.13.5",
 		"mobx-react-lite": "^4.0.7",
@@ -43,6 +45,7 @@
 		"@eslint/js": "^9.13.0",
 		"@ianvs/prettier-plugin-sort-imports": "^4.3.1",
 		"@types/compose-function": "^0.0.33",
+		"@types/lodash.merge": "^4.6.9",
 		"@types/node": "^22.8.1",
 		"@types/react": "^18.3.11",
 		"@types/react-dom": "^18.3.1",
