--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -33,6 +33,7 @@
 		"mobx-react-lite": "^4.0.7",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
+		"react-dropzone": "^14.3.5",
 		"react-hook-form": "^7.53.1",
 		"react-router-dom": "^6.27.0",
 		"sass": "^1.80.6",
