--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -25,6 +25,8 @@
 		"@radix-ui/react-switch": "^1.1.2",
 		"@radix-ui/react-toast": "^1.2.2",
 		"@radix-ui/react-tooltip": "^1.1.4",
+		"@zag-js/editable": "^0.78.3",
+		"@zag-js/react": "^0.78.3",
 		"axios": "^1.7.7",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.1",
