--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -26,6 +26,7 @@
 		"@radix-ui/react-toast": "^1.2.2",
 		"@radix-ui/react-tooltip": "^1.1.4",
 		"@zag-js/editable": "^0.78.3",
+		"@zag-js/element-size": "^0.79.1",
 		"@zag-js/react": "^0.78.3",
 		"axios": "^1.7.7",
 		"class-variance-authority": "^0.7.0",
