--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -20,6 +20,7 @@
 		"@radix-ui/react-dropdown-menu": "^2.1.2",
 		"@radix-ui/react-label": "^2.1.0",
 		"@radix-ui/react-popover": "^1.1.2",
+		"@radix-ui/react-progress": "^1.1.2",
 		"@radix-ui/react-separator": "^1.1.0",
 		"@radix-ui/react-slot": "^1.1.1",
 		"@radix-ui/react-switch": "^1.1.2",
@@ -42,11 +43,8 @@
 		"react-dropzone": "^14.3.5",
 		"react-hook-form": "^7.53.1",
 		"react-router-dom": "^6.27.0",
-		"sass": "^1.80.6",
 		"tailwind-merge": "^2.5.4",
 		"tailwindcss-animate": "^1.0.7",
-		"vite-plugin-checker": "^0.8.0",
-		"vite-plugin-tsconfig-paths": "^1.4.1",
 		"zod": "^3.23.8"
 	},
 	"devDependencies": {
@@ -77,6 +75,8 @@
 		"tailwindcss": "^3.4.14",
 		"typescript": "~5.6.2",
 		"typescript-eslint": "^8.10.0",
+		"vite-plugin-checker": "^0.8.0",
+		"vite-plugin-tsconfig-paths": "^1.4.1",
 		"vite": "^5.4.9"
 	}
 }
