--- a/src/backend/requirements.txt
+++ b/src/backend/requirements.txt
@@ -1,12 +1,10 @@
 Flask==3.1.0
 Flask_Cors==5.0.0
 librosa==0.10.2.post1
-locustio==0.999
 matplotlib==3.8.3
-numpy==2.2.1
+numpy
 Pillow==11.0.0
 PyJWT==2.10.1
 pymongo==4.10.1
 pytest==8.3.4
 tensorflow==2.18.0
-tensorflow_intel==2.18.0
