--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -14,21 +14,24 @@
 	"dependencies": {
 		"@hookform/resolvers": "^3.9.1",
 		"@radix-ui/react-accordion": "^1.2.1",
-		"@radix-ui/react-alert-dialog": "^1.1.4",
+		"@radix-ui/react-alert-dialog": "^1.1.14",
 		"@radix-ui/react-avatar": "^1.1.1",
 		"@radix-ui/react-dialog": "^1.1.2",
 		"@radix-ui/react-dropdown-menu": "^2.1.2",
 		"@radix-ui/react-label": "^2.1.0",
 		"@radix-ui/react-popover": "^1.1.2",
 		"@radix-ui/react-progress": "^1.1.2",
+		"@radix-ui/react-select": "^2.2.4",
 		"@radix-ui/react-separator": "^1.1.0",
+		"@radix-ui/react-slider": "^1.3.5",
 		"@radix-ui/react-slot": "^1.1.1",
 		"@radix-ui/react-switch": "^1.1.2",
 		"@radix-ui/react-toast": "^1.2.2",
+		"@radix-ui/react-toggle": "^1.1.8",
 		"@radix-ui/react-tooltip": "^1.1.4",
-		"@zag-js/editable": "^0.78.3",
-		"@zag-js/element-size": "^0.79.1",
-		"@zag-js/react": "^0.78.3",
+		"@zag-js/editable": "^1.14.0",
+		"@zag-js/element-size": "^1.8.1",
+		"@zag-js/react": "^1.14.0",
 		"axios": "^1.7.7",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.1",
@@ -75,8 +78,8 @@
 		"tailwindcss": "^3.4.14",
 		"typescript": "~5.6.2",
 		"typescript-eslint": "^8.10.0",
+		"vite": "^5.4.9",
 		"vite-plugin-checker": "^0.8.0",
-		"vite-plugin-tsconfig-paths": "^1.4.1",
-		"vite": "^5.4.9"
+		"vite-plugin-tsconfig-paths": "^1.4.1"
 	}
 }
